--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <title>Trip</title>
   </head>
   <body>
+   <div class="all">
     <h1 class="text-center py-4 mb-0">🌴 Far away 💼</h1>
 
     <div class="input_Form">
@@ -82,6 +83,7 @@
         </div>
       </div>
     </div>
+   </div>
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/toastify-js"
